--- a/src/main/java/org/e2d3/HomePage.html
+++ b/src/main/java/org/e2d3/HomePage.html
@@ -10,8 +10,13 @@
 </head>
 <body>
   <div class="container">
-    <h3>チームの作品を登録する</h3>
-    <a href="#" wicket:id="edit">移動</a> 
+    <div class="pull-right" style="margin-top: 20px">
+      <a href="#" wicket:id="logout">ログアウト</a>
+    </div>
+    <p style="margin-top: 20px">
+      <a href="#" wicket:id="edit" class="btn btn-primary">チームの作品を登録する</a>
+      <a href="#" wicket:id="view" class="btn btn-info">チームの作品を表示する</a>
+    </p> 
   
     <h3>評価</h3>
     <table class="table">
