--- a/src/main/java/org/e2d3/HomePage.html
+++ b/src/main/java/org/e2d3/HomePage.html
@@ -17,6 +17,9 @@
       <a href="#" wicket:id="edit" class="btn btn-primary">チームの作品を登録する</a>
       <a href="#" wicket:id="view" class="btn btn-info">チームの作品を表示する</a>
     </p> 
+    <p style="margin-top: 20px">
+      <a href="/document/" class="btn btn-primary">各種ドキュメント</a>
+    </p> 
   
     <h3>評価</h3>
     <table class="table">
@@ -34,15 +37,15 @@
           <td colspan="2">コメント: <span wicket:id="comment"></span></td>
         </tr>
         <tr>
-          <td>動き</td>
+          <td>インタラクション</td>
           <td><a href="#" wicket:id="action">action</a></td>
         </tr>
         <tr>
-          <td>見た目</td>
+          <td>グラフィック</td>
           <td><a href="#" wicket:id="visual">visual</a></td>
         </tr>
         <tr>
-          <td>ストーリー</td>
+          <td>メッセージ</td>
           <td><a href="#" wicket:id="story">story</a></td>
         </tr>
       </tbody>
