--- a/src/main/java/org/e2d3/LoginPage.html
+++ b/src/main/java/org/e2d3/LoginPage.html
@@ -25,6 +25,7 @@
           <button type="submit" class="btn btn-primary">ログイン</button>
         </form>
         <div wicket:id="feedback" class="bg-danger" style="margin-top: 10px"></div>
+        <p>　ユーザIDはcommpassの登録ID等、適当に入力してください。チームIDを選択しログインするとチームに自動的に追加されます。</p>
       </div>
     </div>
   </div>
