--- a/src/main/java/org/e2d3/ResultPage.html
+++ b/src/main/java/org/e2d3/ResultPage.html
@@ -26,9 +26,9 @@
           <th style="width: 20px">ID</th>
           <th>作品名</th>
           <th>メンバー</th>
-          <th style="width: 80px">動き</th>
-          <th style="width: 80px">見た目</th>
-          <th style="width: 80px">物語</th>
+          <th style="width: 80px">インタラクション</th>
+          <th style="width: 80px">グラフィック</th>
+          <th style="width: 80px">メッセージ</th>
           <th style="width: 80px">合計</th>
         </tr>
       </thead>
